// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index.default.build 0 1`] = `
Object {
  "fieldVectors": Array [
    Array [
      "Credit Card Account/undefined",
      Array [],
    ],
    Array [
      "Checking Account/undefined",
      Array [],
    ],
    Array [
      "Investment Account/undefined",
      Array [],
    ],
  ],
  "fields": Array [
    "Credit Card Account",
    "Checking Account",
    "Investment Account",
  ],
  "invertedIndex": Array [],
  "pipeline": Array [
    "stemmer",
  ],
  "version": "2.3.9",
}
`;

exports[`index.default.build 1 1`] = `
Object {
  "fieldVectors": Array [
    Array [
      "Checking Account/undefined",
      Array [],
    ],
    Array [
      "Investment Account/undefined",
      Array [],
    ],
  ],
  "fields": Array [
    "Checking Account",
    "Investment Account",
  ],
  "invertedIndex": Array [],
  "pipeline": Array [
    "stemmer",
  ],
  "version": "2.3.9",
}
`;

exports[`index.default.build 2 1`] = `
Object {
  "fieldVectors": Array [
    Array [
      "Credit Card Account/undefined",
      Array [],
    ],
    Array [
      "Checking Account/undefined",
      Array [],
    ],
  ],
  "fields": Array [
    "Credit Card Account",
    "Checking Account",
  ],
  "invertedIndex": Array [],
  "pipeline": Array [
    "stemmer",
  ],
  "version": "2.3.9",
}
`;

exports[`index.default.build 3 1`] = `
Object {
  "fieldVectors": Array [
    Array [
      "Investment Account/undefined",
      Array [],
    ],
    Array [
      "Credit Card Account/undefined",
      Array [],
    ],
    Array [
      "Checking Account/undefined",
      Array [],
    ],
  ],
  "fields": Array [
    "Investment Account",
    "Credit Card Account",
    "Checking Account",
  ],
  "invertedIndex": Array [],
  "pipeline": Array [
    "stemmer",
  ],
  "version": "2.3.9",
}
`;

exports[`index.default.build 4 1`] = `
Object {
  "fieldVectors": Array [
    Array [
      "Investment Account/undefined",
      Array [],
    ],
  ],
  "fields": Array [
    "Investment Account",
  ],
  "invertedIndex": Array [],
  "pipeline": Array [
    "stemmer",
  ],
  "version": "2.3.9",
}
`;

exports[`index.default.build 5 1`] = `
Object {
  "fieldVectors": Array [],
  "fields": Array [],
  "invertedIndex": Array [],
  "pipeline": Array [
    "stemmer",
  ],
  "version": "2.3.9",
}
`;

exports[`index.default.search 0 1`] = `undefined`;

exports[`index.default.search 1 1`] = `undefined`;

exports[`index.default.search 2 1`] = `undefined`;

exports[`index.default.search 3 1`] = `undefined`;

exports[`index.default.search 4 1`] = `undefined`;

exports[`index.default.search 5 1`] = `undefined`;

exports[`index.default.serialize 0 1`] = `"{\\"schema\\":{\\"ref\\":\\"\\",\\"fields\\":[]}}"`;

exports[`index.default.subscribe 0 1`] = `false`;

exports[`index.default.subscribe 1 1`] = `true`;

exports[`index.default.subscribe 2 1`] = `false`;

exports[`index.default.unsubscribe 0 1`] = `"32-01-2020"`;

exports[`index.default.unsubscribe 1 1`] = `"01-01-2020"`;

exports[`index.default.unsubscribe 2 1`] = `""`;

exports[`index.default.update 0 1`] = `undefined`;

exports[`index.default.update 1 1`] = `undefined`;

exports[`index.default.update 2 1`] = `undefined`;

exports[`index.default.update 3 1`] = `undefined`;

exports[`index.default.update 4 1`] = `undefined`;
